dhall/tests/type-inference/failure/unit/RecordTypeDuplicateFields.txt
Type error: error: RecordTypeDuplicateField
 --> <current file>:1:1
  |
1 | { x: Natural, x: Natural }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ RecordTypeDuplicateField
  |
